结构调整，请求封装

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1932,7 +1932,7 @@ h6 {
 --------------------------------------------------------------*/
 #header {
   padding: 14px 0;
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   top: 0;
   right: 0;
